# practice1

./: CMakeLists.txt  Practice1.kdev4  README.md
.kdev4/: Practice1.kdev4
include/: filehandler.h  shaderprogram.h  texture.h  world.h
include/glad/: glad.h
resources/: fragment.fs  vertex.vs
src/: filehandler.cpp  glad.c  main.cpp  shaderprogram.cpp  texture.cpp
